# SimpleJSON

./: .gitignore  CMakeLists.txt  Makefile  README.md  simpleJSON.hpp  tests.cpp
.github/workflows/: compileAndRunTests.yml
docs/: Doxyfile  index.html
docs/html/: CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  DartConfiguration_8tcl.html  README_8md.html  TODO_8txt.html  TargetDirectories_8txt.html  annotated.html  classes.html  classsimpleJSON_1_1JSONArray-members.html  classsimpleJSON_1_1JSONArray.html  classsimpleJSON_1_1JSONBool-members.html  classsimpleJSON_1_1JSONBool.html  classsimpleJSON_1_1JSONException-members.html  classsimpleJSON_1_1JSONException.html  classsimpleJSON_1_1JSONException__coll__graph.map  classsimpleJSON_1_1JSONException__coll__graph.md5  classsimpleJSON_1_1JSONNull-members.html  classsimpleJSON_1_1JSONNull.html  classsimpleJSON_1_1JSONNumber-members.html  classsimpleJSON_1_1JSONNumber.html  classsimpleJSON_1_1JSONObject-members.html  classsimpleJSON_1_1JSONObject.html  classsimpleJSON_1_1JSONString-members.html  classsimpleJSON_1_1JSONString.html  dir_000005_000004.html  dir_2b19e1647a9be331e8c06cbcafff1ac7.html  dir_35035c2b261e6448122a537dd849c18f.html  dir_4528ac4cf8a7f24cf789b4e959fd3f70.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6807350b0a21e4f97916c6dd58017d51.html  dir_6f112703a03ac0837c56d7ca2eb913cd.html  dir_75ca75d1a2d731129dc5c36bab98a10e.html  dir_a30fd5000947d323a9f363d528741348.html  dir_a87a2757efa85ecb68ae2812a24c17a6.html  (+87 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+23 more)
examples/: CMakeLists.txt  example01.cpp
gh_pages/: index.html
include/: CMakeLists.txt
include/simpleJSON/: simpleJSON.hpp
testInputs/: smallJson.json
tests/: CMakeLists.txt  mayPassOrFailParsing.cpp  mustFailParsing.cpp  mustPassParsing.cpp  mustTransformInput.cpp  testJSONArray.cpp  testJSONBool.cpp  testJSONNull.cpp  testJSONNumber.cpp  testJSONObject.cpp  testJSONString.cpp  testStreamIO.cpp
tests/testInputs/: smallJson.json
